--- a/env/.env.sample
+++ b/env/.env.sample
@@ -1,6 +1,6 @@
 ## Rename this File As .env
 ## web portal config
-FLASK_SECRET_KEY='your_very_strong_and_unique_secret_key_here'
+FLASK_SECRET_KEY='your_very_strong_and_unique_secret_key_here' # generate using this command `openssl rand -hex 32`
 ADMIN_USERNAME='' # admin username for web portal
 ADMIN_PASSWORD='' # admin pass for web portal
 FLASK_DEBUG='True' # Set to 'True' for development, 'False' for production
