feat: add TELEGRAM_ADMIN_GROUP_ID in .env
Signed-off-by: rafidalhaque <rafidalhaque@proton.me>

--- a/env/.env.sample
+++ b/env/.env.sample
@@ -8,3 +8,4 @@ FLASK_DEBUG='True' # Set to 'True' for development, 'False' for production
 
 ## bot config
 BOT_TOKEN='' # Paste your actual token from BotFather here
+TELEGRAM_ADMIN_GROUP_ID='' # telegram group id for resume forwarding
