fix: setup host and port in .env
Signed-off-by: rafidalhaque <rafidalhaque@proton.me>

--- a/env/.env.sample
+++ b/env/.env.sample
@@ -5,6 +5,8 @@ FALLBACK_SECRET_KEY='' # backup secret key
 ADMIN_USERNAME='' # admin username for web portal
 ADMIN_PASSWORD='' # admin pass for web portal
 FLASK_DEBUG='True' # Set to 'True' for development, 'False' for production
+HOST='' # change your host if needed, default value is '0.0.0.0'
+PORT='' # change port of web portal, default value is 5000
 
 ## bot config
 BOT_TOKEN='' # Paste your actual token from BotFather here
