--- a/env/.env.sample
+++ b/env/.env.sample
@@ -5,8 +5,8 @@ FALLBACK_SECRET_KEY='' # backup secret key
 ADMIN_USERNAME='' # admin username for web portal
 ADMIN_PASSWORD='' # admin pass for web portal
 FLASK_DEBUG='True' # Set to 'True' for development, 'False' for production
-HOST='' # change your host if needed, default value is '0.0.0.0'
-PORT='' # change port of web portal, default value is 5000
+HOST='0.0.0.0' # change your host if needed, default value is '0.0.0.0'
+PORT='5000' # change port of web portal, default value is 5000
 
 ## bot config
 BOT_TOKEN='' # Paste your actual token from BotFather here
